--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,8 @@ pytest==8.3.1
     #   pytest-mock
 pytest-mock==3.14.0
     # via -r requirements.in
+python-decouple==3.8
+    # via -r requirements.in
 requests==2.32.3
     # via
     #   google-api-core
