--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@ google-auth
 google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
+python-decouple
+#dev
 pytest
 pytest-mock
-python-decouple
