--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "gfetch-cli"
 version = "0.1.0"
-description = "Add your description here"
+description = "A CLI app to back up your gmail emails locally"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
