--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["uv_build>=0.8.2,<0.9.0"]
+build-backend = "uv_build"
+
 [project]
-name = "gfetch-cli"
+name = "gfetch"
 version = "0.1.1"
 description = "A CLI app to back up your gmail emails locally"
 readme = "README.md"
@@ -13,14 +17,6 @@ dependencies = [
     "google-auth>=2.40.3",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
-    "python-decouple>=3.8",
-]
-
-[dependency-groups]
-dev = [
-    "pytest>=8.4.1",
-    "pytest-cov>=6.2.1",
-    "pytest-mock>=3.14.1",
     "python-decouple>=3.8",
 ]
 
@@ -41,9 +37,19 @@ classifiers = [
     "Topic :: Text Processing"
 ]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
+    "python-decouple>=3.8",
+]
+
+
+
 [project.urls]
 Homepage = "https://github.com/jwjacobson/gfetch-cli"
 Issues = "https://github.com/jwjacobson/gfetch-cli/issues"
 
 [project.scripts]
-gfetch-cli = "gfetch_cli.app:main"
+gfetch = "gfetch.app:main"
