--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-pythonpath = src/gfetch
+pythonpath = src/
 testpaths = tests
-addopts = --cov=. --cov-report=html
+addopts = --cov=gfetch --cov-report=html
